--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -26,7 +26,10 @@
               <%= form_for("gamer", url: gamer_session_path) do |f| %>
                 <%= f.text_field :login, style: "margin-bottom: 15px;", placeholder: t(:username_or_email), size: "30" %>
                 <%= f.password_field :password, style: "margin-bottom: 15px;", placeholder: t(:password), size: "30" %>
-                <%= f.submit t(:sign_in), style: "clear: left; width: 100%; height: 32px; font-size: 13px;", :class => "btn btn-primary" %>
+                <div><%= f.check_box :remember_me, :class => "pull-left" %> <%= label_tag :remember_me, t(:remember_me), :class => "pull-left", style: "margin-left: 10px;" %></div>
+                <br /><br />
+                <%= link_to t(:forgot_password), new_password_path(Gamer), :style => "margin-top: -14px;", class: "pull-left" %><br />
+                <%= f.submit t(:sign_in), style: "clear: left; width: 100%; height: 32px; font-size: 13px;", class: "btn btn-primary" %>
               <% end %>
             </div>
           </li>
