--- a/arability/app/views/games/facebookhalloffame.html.erb
+++ b/arability/app/views/games/facebookhalloffame.html.erb
@@ -18,15 +18,14 @@
       </tr>
     </thead>
     <tbody align="center">
-      <% @gamers = Gamer.find(common, :order => "highest_score DESC", limit: 10) %>
-      <% rank = 0 %>
+      <% @gamers = Gamer.where(id: common).order("highest_score DESC").page(params[:page]).per(5) %>
       <% @gamers.each do |user| %>
       <% if user == current_gamer %>
       <tr style="background-color: #DDDDDD"><td>*
       <% else %>
       <tr><td>
       <% end %>
-        <%= rank = rank + 1 %></td>
+        <%= rank = Gamer.get_facebook_rank(user) %></td>
         <td><%= user.username %></td>
         <td><%= user.highest_score %></td>
         <% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>
@@ -40,7 +39,8 @@
       </tr>
       <br>
       <% end %>
-      <% end %>
     </tbody>
   </table>
+  <div align="center"><%= paginate @gamers %></div>
+  <% end %>
 </div>
