--- a/arability/app/views/games/halloffame.html.erb
+++ b/arability/app/views/games/halloffame.html.erb
@@ -51,15 +51,13 @@
       </tr>
     </thead>
     <tbody align="center">
-      <% @gamers = Gamer.find(:all, order: "highest_score DESC", limit:10) %>
-      <% rank = 0 %>
       <% @gamers.each do |user| %>
       <% if user == current_gamer %>
       <tr style="background-color: #DDDDDD"><td>*
       <% else %>
       <tr><td>
       <% end %>
-        <%= rank = rank + 1 %></td>
+        <%= rank = Gamer.get_gamer_rank(user) %></td>
         <td><%= user.username %></td>
         <td><%= user.highest_score %></td>
         <% @Trophies = Gamers_Trophy.find_by_gamer_id(user.id) %>
@@ -75,4 +73,5 @@
       <% end %>
     </tbody>
   </table>
+  <div align="center"><%= paginate @gamers %></div>
 </div>
