--- a/arability/app/views/admin/dashboard.html.erb
+++ b/arability/app/views/admin/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container admin">
 	<div class="row">
-		<%= render partial: 'sidebar-nav', locals: {active: "dashboard"} %>
+		<%= render partial: "sidebar-nav", locals: {active: "dashboard"} %>
 		<div class="span9 offset3">
 			<div class="tab-content">
 				<div class="tab-pane well span7 active" id="admin-home">
