--- a/arability/app/views/admin/_sidebar-nav.html.erb
+++ b/arability/app/views/admin/_sidebar-nav.html.erb
@@ -9,6 +9,9 @@
 			<li <%= active == "list-gamers"? "class=active" : "" %>>
 				<a href="/admin/list/gamers">عرض اللاعبيين</a>
 			</li>
+			<li <%= active == "list-developers"? "class=active" : "" %>>
+				<a href="/admin/list/developers">عرض المطوريين</a>
+			</li>
 			<li class="nav-header">إدارة الكلمات</li>
 			<li class="divider"></li>
 			<li <%= active == "add-word"? "class=active" : "" %>>
