--- a/arability/app/views/admin/list_developers.html.erb
+++ b/arability/app/views/admin/list_developers.html.erb
@@ -1,15 +1,15 @@
 <div class="container admin">
 	<div class="row">
-		<%= render partial: 'sidebar-nav', locals: {active: "list-gamers"} %>
+		<%= render partial: 'sidebar-nav', locals: {active: "admin-list-developers"} %>
 		<div class="span9 offset3">
 			<div class="tab-content">
-				<div class="tab-pane well span7 active" id="admin-list-gamers">
+				<div class="tab-pane well span7 active" id="admin-list-developers">
 					<legend>
 						<div class="pull-left pagination">
 							<%= paginate @list, :remote => true %>
 						</div>
 						<a>
-							عرض اللاعبيين
+							عرض المطوريين
 						</a>
 					</legend>
 					<table class="table table-bordered table-hover">
@@ -17,19 +17,17 @@
 							<tr>
 								<td>اسم المستخدم</td>
 								<td>البريد الاكترونى</td>
-								<td>عدد الانجازات</td>
-								<td>عدد الجوائز</td>
-								<td>عدد الاصوات</td>
+								<td>عدد المشارييع</td>
+								<td>عدد الكلمات</td>
 							</tr>
 						</thead>
 						<tbody>
 							<% for item in @list %>
 								<tr>
-									<td><%= item.username %></td>
-									<td><%= item.email %></td>
-									<td><%= item.trophies.count %></td>
-									<td><%= item.prizes.count %></td>
-									<td><%= item.votes.count %></td>
+									<td><%= item.gamer.username %></td>
+									<td><%= item.gamer.email %></td>
+									<td><%= item.projects.count %></td>
+									<td><%= item.keywords.count %></td>
 								</tr>
 							<% end %>
 						</tbody>
