[351][WIP] list admins and add admins

--- a/arability/app/views/admin/_sidebar-nav.html.erb
+++ b/arability/app/views/admin/_sidebar-nav.html.erb
@@ -12,6 +12,9 @@
 			<li <%= active == "list-developers"? "class=active" : "" %>>
 				<a href="/admin/list/developers">عرض المطوريين</a>
 			</li>
+			<li <%= active == "list-admins"? "class=active" : "" %>>
+				<a href="/admin/list/admins">عرض المشرفيين</a>
+			</li>
 			<li class="nav-header">إدارة الكلمات</li>
 			<li class="divider"></li>
 			<li <%= active == "add-word"? "class=active" : "" %>>
