--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -115,9 +115,9 @@
     <a class="btn pull-right" href="/developers/projects/<%= project1.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% end %>
   <% if I18n.locale == :ar %>
-   <a style="margin-left : 6px;" href="#delete_modal" role="button" class="btn pull-left btn-danger" onClick="modalToggle()" id="LaunchDemo"><i class="icon-trash"></i><%= t(:projects_index_delete)%></a>
+   <a style="margin-left : 6px;" href="#delete_modal" role="button" class="btn pull-left btn-warning" onClick="modalToggle()" id="LaunchDemo"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% else %>
-  <a style="margin-right : 6px;" href="#delete_modal" role="button" class="btn pull-right btn-danger" onClick="modalToggle()" id="LaunchDemo"> <i class="icon-trash"></i><%= t(:projects_index_delete)%></a>
+  <a style="margin-right : 6px;" href="#delete_modal" role="button" class="btn pull-right btn-warning" onClick="modalToggle()" id="LaunchDemo"> <i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
     <div id="delete_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-header">
@@ -129,7 +129,7 @@
       </div>
       <div class="modal-footer">
         <button class="btn" data-dismiss="modal"><%= t(:close_share) %></button>
-        <%= link_to t(:submit_remove), "/developers/projects/remove_project_from_developer?dev_id=#{@developer.id}&project_id=#{project1.id}",:class => "btn btn-danger" %>
+        <%= link_to t(:submit_remove), "/developers/projects/remove_project_from_developer?dev_id=#{@developer.id}&project_id=#{project1.id}",:class => "btn btn-warning" %>
       </div>
     </div>
   <br />
@@ -155,9 +155,9 @@
     <a class="btn pull-right" href="/developers/projects/<%= project2.id %>/edit"><i class="icon-edit"></i><%= t(:projects_index_edit)%></a>
   <% end %>
   <% if I18n.locale == :ar %>
-   <a style="margin-left : 6px;" href="#delete_modal" role="button" class="btn pull-left btn-danger" onClick="modalToggle()" id="LaunchDemo"><i class="icon-trash"></i><%= t(:projects_index_delete)%></a>
+   <a style="margin-left : 6px;" href="#delete_modal" role="button" class="btn pull-left btn-warning" onClick="modalToggle()" id="LaunchDemo"><i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% else %>
-  <a style="margin-right : 6px;" href="#delete_modal" role="button" class="btn pull-right btn-danger" onClick="modalToggle()" id="LaunchDemo"> <i class="icon-trash"></i><%= t(:projects_index_delete)%></a>
+  <a style="margin-right : 6px;" href="#delete_modal" role="button" class="btn pull-right btn-warning" onClick="modalToggle()" id="LaunchDemo"> <i class="icon-remove"></i><%= t(:projects_index_delete)%></a>
   <% end %>
     <div id="delete_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-header">
@@ -169,7 +169,7 @@
       </div>
       <div class="modal-footer">
         <button class="btn" data-dismiss="modal"><%= t(:close_share) %></button>
-        <%= link_to t(:submit_remove), "/developers/projects/remove_project_from_developer?dev_id=#{@developer.id}&project_id=#{project1.id}",:class => "btn btn-danger" %>
+        <%= link_to t(:submit_remove), "/developers/projects/remove_project_from_developer?dev_id=#{@developer.id}&project_id=#{project1.id}",:class => "btn btn-warning" %>
       </div>
     </div>
   <br />
