[351][WIP] list projects

--- a/arability/app/views/admin/_sidebar-nav.html.erb
+++ b/arability/app/views/admin/_sidebar-nav.html.erb
@@ -15,6 +15,11 @@
 			<li <%= active == "list-admins"? "class=active" : "" %>>
 				<a href="/admin/list/admins">عرض المشرفيين</a>
 			</li>
+			<li class="nav-header">إدارة المشارييع</li>
+			<li class="divider"></li>
+			<li <%= active == "list-projects"? "class=active" : "" %>>
+				<a href="/admin/list/projects">عرض المشارييع</a>
+			</li>
 			<li class="nav-header">إدارة الكلمات</li>
 			<li class="divider"></li>
 			<li <%= active == "add-word"? "class=active" : "" %>>
