--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -18,6 +18,7 @@
           <li><%= link_to(t(:arabic), url_for(locale: :ar)) %></li>
         <% end %>
       <% if !gamer_signed_in? %>
+          <li><%= link_to t(:game),  "/game" %></li>
           <li><a href="/gamers/sign_up"><%= t :sign_up %></a></li>
           <li class="dropdown">
           <a class="dropdown-toggle" href="#" data-toggle="dropdown"><%= t :sign_in %> <strong class="caret"></strong></a>
@@ -30,7 +31,12 @@
             </div>
           </li>
       <% else %>
-        <li><%= link_to t(:backend), backend_home_path %></li>
+        <% path = request.path %>
+        <% if path.include? "developers/" %>
+          <li><%= link_to t(:game),  "/game" %></li>
+        <% else %>
+          <li><%= link_to t(:backend), backend_home_path %></li>
+        <% end %>
         <li><a href="/gamers/edit"><%= t(:settings) %></a></li>
         <li><a href="/gamers/sign_out"><%= t(:sign_out) %></a></li>
       <% end %>
