[MC][issue #369]edit in code due to new migration in subscription model

--- a/arability/app/views/admin/view_subscription_models.html.erb
+++ b/arability/app/views/admin/view_subscription_models.html.erb
@@ -1,7 +1,8 @@
 <table class="table table-striped">
   <tr>
     <th>#</th>
-    <th>الإسم</th>
+    <th>الإسم العربي</th>
+    <th>الإسم الإنجليزي</th>
     <th>الحد الأقصى للبحث</th>
     <th>الحد الأقصى للمتابعة</th>
     <th>الحد الأقصى للمشاريع</th>
@@ -10,7 +11,8 @@
   <% @models.each do |model| %>
     <tr>
     	<th><%= model.id %></th>
-    	<th><%= model.name %></th>
+    	<th><%= model.name_ar %></th>
+      <th><%= model.name_en %></th>      
       <th><%= model.limit_search %></th>
       <th><%= model.limit_follow %></th>
       <th><%= model.limit_project %></th>
