--- a/arability/app/views/admin/edit_subscription_model.html.erb
+++ b/arability/app/views/admin/edit_subscription_model.html.erb
@@ -10,9 +10,15 @@
       </div>
     <% end %>
     <div class="control-group">
-      <%= f.label :الإسم, :class => "control-label" %>
+      <%= f.label :الإسم العربي, :class => "control-label" %>
       <div class="controls">
-        <%= f.text_field :name, :placeholder => "الإسم" %>
+        <%= f.text_field :name_ar, :placeholder => "الإسم العربي" %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= f.label :الإسم الإنجليزي, :class => "control-label" %>
+      <div class="controls">
+        <%= f.text_field :name_en, :placeholder => "English name" %>
       </div>
     </div>
     <div class="control-group">
