--- a/arability/app/views/follow/list_followed.html.erb
+++ b/arability/app/views/follow/list_followed.html.erb
@@ -9,18 +9,31 @@
   </thead>
   <tbody>
   <% @keywords.each do |keyword| %>
-    <tr>
-        <td><%= keyword.name %></td>
-        <% if I18n.locale==:en %>
-        <td><span class="pull-right"><%= link_to t(:unfollow), unfollow_word_path(keyword.id), :class => "btn btn-primary" %></span></td>
-        <% else %>
-        <td><span class="pull-left"><%= link_to t(:unfollow), unfollow_word_path(keyword.id), :class => "btn btn-primary" %></span></td>
-        <% end %>
-    </tr>
+    
+      <tr id="<%= keyword.id %>">
+          <td><%= keyword.name %></td>
+          <td><span class="unfollowbtn"><a href="#" class="btn btn-primary" style="width: 60px" onclick="clickfollow(this, <%= keyword.id %>);"><%= t(:unfollow) %></a></span></td>
+      </tr>
   <% end %> 
   </tbody>
 </table>
 </div>
 <% else %>
 <h4><%= t(:no_followed_words) %></h4>
-<% end %> 
+<% end %>
+
+<script>
+  function clickfollow(button, id){
+    $button = $(button);
+    $('#'+id).fadeOut();
+    $.get("/developers/unfollow/" + id);
+  }
+</script>
+
+<script type="text/javascript">
+  <% if I18n.locale == :ar %>
+    $(".unfollowbtn").attr("class", "pull-left");
+  <% else %>
+    $(".unfollowbtn").attr("class", "pull-right");
+  <% end %>
+</script>
