[#198][#199][WIP] rendering from game view

--- a/arability/app/views/games/fame.js.erb
+++ b/arability/app/views/games/fame.js.erb
@@ -1,2 +1,3 @@
 $('#loading-server').remove();
-$('.zone').append('<%= render "halloffame" %>');
+$('.zone').empty();
+$('.zone').append('<%= escape_javascript(render("halloffame")) %>');
