[Issue #75 #210][WIP] finished implementation

--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "pages" %>
   <% if I18n.locale == :ar %>
-    <%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
-    <%= stylesheet_link_tag "bootstrap-responsive.rtl", :media => "all" %>
+    
+    <%= stylesheet_link_tag "bootstrap-responsive.rtl" %>
+<%= stylesheet_link_tag "bootstrap.rtl" %>
     <%= stylesheet_link_tag "bootstrap-rtl-overrides", :media => "all"%>
     <%= javascript_include_tag "bootstrap.rtl", :media => "all" %>
   <% else %>
