[Issue #364][fixed] fixed search box font size in arabic

--- a/arability/app/views/search/_autocomplete-script.js.erb
+++ b/arability/app/views/search/_autocomplete-script.js.erb
@@ -10,3 +10,8 @@ function fetch_keywords(keyword, callback){
     callback(data);
   })
 }
+<% if I18n.locale == :en %>
+  $("#search").css("font-size","14px");
+<% elsif I18n.locale == :ar %>
+  $("#search").css("font-size","18px");
+<% end %>
